# MeFetch

./: .gitignore  README.md  find_sources.py  meson.build
headers/: mefetch.h
headers/image/: imagel.h
headers/stb/: stb_image.h  stb_image_write.h
headers/utils/: argc.h  color.h
sources/: mefetch.c
sources/image/: imagel.c
sources/utils/: argc.c
